# stele-context

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETE_PROJECT_DOCUMENTATION.md  CONTRIBUTING.md  LICENSE  LLM_Development.md  MANIFEST.in  README.md  STABILITY.md  TODO.md  pyproject.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: publish.yml  test.yml
benchmarks/: bench_chunking.py  bench_scale.py  bench_search.py  bench_storage.py  eval_search_quality.py  run_all.py
chunkforge/: __init__.py  bm25.py  cli.py  core.py  engine.py  index.py  index_store.py  mcp_server.py  mcp_stdio.py  metadata_storage.py  session.py  session_storage.py  storage.py  symbol_storage.py  symbols.py
chunkforge/chunkers/: __init__.py  audio.py  base.py  code.py  image.py  numpy_compat.py  pdf.py  text.py  video.py
docs/: agent-workflow.md  architecture.md  philosophy.md
findings/: grep-index-proposal.md  stele-context.md  stele-context_closed.md
findings/sc_kimi_review_3/: stele-context_closed.md
plans/: multimodal-assessment.md  v0.2-roadmap-and-release-checklist.md
stele/: __init__.py  agent_registry.py  bm25.py  change_detection.py  change_notifications.py  cli.py  cli_metadata.py  config.py  connection_pool.py  coordination.py  document_lock_storage.py  engine.py  engine_utils.py  env_checks.py  index.py  index_store.py  indexing.py  lock_ops.py  mcp_handlers.py  mcp_schemas.py  mcp_server.py  mcp_stdio.py  mcp_tool_defs.py  mcp_tool_defs_ext.py  metadata_storage.py  rwlock.py  search_engine.py  session.py  session_storage.py  stemmer.py  storage.py  storage_delegates.py  storage_schema.py  symbol_graph.py  symbol_patterns.py  symbol_storage.py  symbols.py  tool_registry.py
stele/chunkers/: audio.py  base.py  code.py  code_patterns.py  image.py  numpy_compat.py  pdf.py  text.py  video.py
stele_context/: __init__.py  agent_grep.py  agent_registry.py  bm25.py  change_detection.py  change_notifications.py  cli.py  cli_metadata.py  config.py  connection_pool.py  coordination.py  engine.py  engine_index_mixin.py  engine_info_mixin.py  engine_lock_mixin.py  engine_search_mixin.py  engine_symbol_mixin.py  engine_utils.py  indexing.py  llm_embedding.py  mcp_handlers.py  mcp_server.py  mcp_stdio.py  mcp_tool_defs.py  mcp_tool_defs_ext.py  mcp_tools_primary.py  mcp_tools_symbols.py  metadata_storage.py  protocols.py  search_engine.py  session.py  session_storage.py  stemmer.py  storage.py  storage_delegates.py  storage_schema.py  symbol_graph.py  symbol_patterns.py  symbol_storage.py  symbols.py  (+1 more)
stele_context/chunkers/: base.py  code.py  text.py
tests/: __init__.py  conftest.py  test_agent_embeddings.py  test_base_chunker.py  test_batch_summaries.py  test_bm25.py  test_chunk_history.py  test_chunkers.py  test_cli.py  test_concurrency.py  test_config.py  test_conflicts.py  test_core.py  test_engine.py  test_env_checks.py  test_index.py  test_index_store.py  test_mcp_server.py  test_mcp_stdio.py  test_metadata.py  test_numpy_compat.py  test_search_engine.py  test_search_regression.py  test_session.py  test_sqlite_resilience.py  test_storage_migration.py  test_symbol_storage.py  test_symbols.py  test_worktree_safety.py
wiki-local/: glossary.md  index.md  spec-project.md
