[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chunkforge"
version = "0.7.0"
description = "Local context cache for LLM agents with semantic chunking and vector search"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ChunkForge Contributors"}
]
keywords = ["llm", "context-cache", "chunking", "vector-search", "semantic-search", "offline", "local"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
performance = [
    "msgspec>=0.18.0",
    "numpy>=1.24.0",
]
image = [
    "Pillow>=10.0",
]
pdf = [
    "pymupdf>=1.23.0",
]
audio = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
]
video = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "msgspec>=0.18.0",
    "numpy>=1.24.0",
    "Pillow>=10.0",
    "pymupdf>=1.23.0",
    "librosa>=0.10.0",
    "opencv-python>=4.8.0",
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
chunkforge = "chunkforge.cli:main"
chunkforge-mcp = "chunkforge.mcp_stdio:main"

[project.urls]
Homepage = "https://github.com/chunkforge/chunkforge"
Repository = "https://github.com/chunkforge/chunkforge"
Documentation = "https://github.com/chunkforge/chunkforge#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["chunkforge*"]

[tool.setuptools.package-data]
chunkforge = ["py.typed"]
