[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stele-context"
version = "0.9.0"
description = "Local context cache for LLM agents with semantic chunking and vector search"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Stele Contributors"}
]
keywords = ["llm", "context-cache", "chunking", "vector-search", "semantic-search", "offline", "local"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
performance = [
    "msgspec>=0.18.0",
    "numpy>=1.24.0",
]
image = [
    "Pillow>=10.0",
]
pdf = [
    "pymupdf>=1.23.0",
]
audio = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
]
video = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]
tree-sitter = [
    "tree-sitter>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-php>=0.23.0",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "msgspec>=0.18.0",
    "numpy>=1.24.0",
    "Pillow>=10.0",
    "pymupdf>=1.23.0",
    "librosa>=0.10.0",
    "opencv-python>=4.8.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
stele = "stele.cli:main"
stele-mcp = "stele.mcp_stdio:main"

[project.urls]
Homepage = "https://github.com/IronAdamant/Stele"
Repository = "https://github.com/IronAdamant/Stele"
Documentation = "https://github.com/IronAdamant/Stele#readme"

[tool.coverage.run]
omit = [
    "stele/cli.py",
    "stele/cli_metadata.py",
    "stele/mcp_stdio.py",
    "stele/chunkers/audio.py",
    "stele/chunkers/image.py",
    "stele/chunkers/pdf.py",
    "stele/chunkers/video.py",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stele*"]

[tool.setuptools.package-data]
stele = ["py.typed"]
