[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stele-context"
version = "1.0.7"
description = "Local context cache for LLM agents with semantic chunking and vector search"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Stele Context Contributors"}
]
keywords = ["llm", "context-cache", "chunking", "vector-search", "semantic-search", "offline", "local"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
performance = [
    "msgspec>=0.18.0",
    "numpy>=1.24.0",
]
image = [
    "Pillow>=10.0",
]
pdf = [
    "pymupdf>=1.23.0",
]
audio = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
]
video = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]
tree-sitter = [
    "tree-sitter>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-php>=0.23.0",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "msgspec>=0.18.0",
    "numpy>=1.24.0",
    "Pillow>=10.0",
    "pymupdf>=1.23.0",
    "librosa>=0.10.0",
    "opencv-python>=4.8.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
stele-context = "stele_context.cli:main"
stele-context-mcp = "stele_context.mcp_stdio:main"

[project.urls]
Homepage = "https://github.com/IronAdamant/stele-context"
Repository = "https://github.com/IronAdamant/stele-context"
Documentation = "https://github.com/IronAdamant/stele-context#readme"

[tool.coverage.run]
omit = [
    "stele_context/cli.py",
    "stele_context/cli_metadata.py",
    "stele_context/mcp_stdio.py",
    "stele_context/chunkers/audio.py",
    "stele_context/chunkers/image.py",
    "stele_context/chunkers/pdf.py",
    "stele_context/chunkers/video.py",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stele_context*"]

[tool.setuptools.package-data]
stele_context = ["py.typed"]
